# rust-i18n-autotranslate

./: .gitignore  Cargo.toml  README.md
example/: .env.example  .gitignore  Cargo.toml
example/locales/: en.json  en.yml  fr.yml
example/src/: main.rs
src/: lib.rs
src/api/: deepl_translate.rs  google_translate.rs  libre_translate.rs  mod.rs
src/config/: mod.rs
src/i18n/: autogen_cache.rs  mod.rs
src/utils/: languages.rs  mod.rs  translation_limiter.rs
