[package]
name = "rust-i18n-autotranslate"
version = "0.1.5"
edition = "2024"
authors = ["Rohit Singh <razein@wizql.com>"]
description = "Auto translate locales build time and runtime"
repository = "https://github.com/razein97/rust-i18n-autotranslate"
homepage = "https://github.com/razein97/rust-i18n-autotranslate"
documentation = "https://docs.rs/rust-i18n-autotranslate"
license = "MIT"
rust-version = "1.89.0"
keywords = ["translate", "google-translate", "i18n", "autotranslate"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ureq = { version = "3", default-features = false, features = [
    "json",
    "rustls",
] }
dotenvy = "0.15"
normpath = "1"
rust-i18n-support = ">=3.1.5, <4"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
sha256 = "1.6.0"
log = "0.4"
html-escape = "0.2"
regex = "1"
